infra/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flotte-dev
  labels:
    project: gestion-flotte
    env: dev
